Filter Menu Admin for Admin and Root Fixing Parsing Crime Location to Push Notification

--- a/crimemapsappsuser/src/main/AndroidManifest.xml
+++ b/crimemapsappsuser/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.harifrizki.core.component.activity.ConnectionErrorActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".module.splash.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
