--- a/crimemapsappsuser/src/main/AndroidManifest.xml
+++ b/crimemapsappsuser/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.harifrizki.crimemapsappsuser">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CrimeMapsAppsUser"
         tools:ignore="AllowBackup,LockedOrientationActivity">
-
+        <activity
+            android:name=".module.crimelocation.CrimeLocationDetailActivity"
+            android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
